--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -3,6 +3,6 @@ browser = chrome
 username = admin
 password = Hum@nhrm123
 
-dBUrl = jdbc:mysql://3.237.189.167:3306/syntaxhrm_mysql;
-userName = syntax_hrm 
+dBUrl = jdbc:mysql://3.237.189.167:3306/syntaxhrm_mysql
+userName = syntax_hrm
 dBpassword = syntaxhrm123
