--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>3.141.59</version>
+            <version>4.25.0</version>
         </dependency>
 
         <dependency>
@@ -154,6 +154,7 @@
                 <version>3.0.0-M6</version>
                 <configuration>
                     <includes>
+                        <include>**/*Test.java</include>
                         <include>**/*RunnerClass.java</include>
                     </includes>
                     <testFailureIgnore>true</testFailureIgnore>
