--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -6,3 +6,5 @@ password = Hum@nhrm123
 dBUrl = jdbc:mysql://3.237.189.167:3306/syntaxhrm_mysql
 userName = syntax_hrm
 dBpassword = syntaxhrm123
+
+delta_url = https://www.delta.com/
