--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -2,8 +2,14 @@ url = http://hrm.syntaxtechs.net/humanresources/symfony/web/index.php/auth/login
 browser = chrome
 username = admin
 password = Hum@nhrm123
-isRemote = true
-hubURL=http://54.227.164.20:4444/wd/hub
+isRemote = false
+hubURL= http://98.81.162.134:4444/wd/hub
+
+
+
+
+
+
 
 
 dBUrl = jdbc:mysql://3.237.189.167:3306/syntaxhrm_mysql
