--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,68 @@
-# Project exclude paths
-/target/
+# Maven build output
+target/
+*.class
 
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-dev-debug.log
-# Dependency directories
-node_modules/
-# Environment variables
-.env
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# IntelliJ IDEA
+.idea/
+*.iml
+*.iws
+*.ipr
+out/
+
+# Eclipse
+.classpath
+.project
+.settings/
+bin/
+
+# VS Code
+.vscode/
+
 # OS specific
 .DS_Store
+Thumbs.db
 
-# Task files
-# tasks.json
-# tasks/
+# Logs
+*.log
+logs/
 
-# AI Assistant directories and files
+# Test outputs
+test-output/
+screenshots/failed/
+screenshots/passed/
+
+# Cucumber reports
+**/cucumber-reports/
+**/cucumber-html-reports/
+**/cucumber.json
+**/report.html
+**/report.json
+
+# TestNG
+test-output/
+
+# Surefire reports
+**/surefire-reports/
+
+# Environment variables
+.env
+.env.local
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~
+
+# Package files
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# AI Assistant files (not needed in repo)
 .agents/
 .claude/
 .cursor/
@@ -36,15 +71,13 @@ node_modules/
 .taskmaster/
 .clinerules/
 .roomodes/
-.rules/
 AGENT.md
 AGENTS.md
 CLAUDE.md
 GEMINI.md
 opencode.json
 .mcp.json
-.env.example
-package.json
+
+# Node modules (if any)
+node_modules/
 package-lock.json
-scripts/
-screenshots/ 
